Attempt to fix video's iFrame layout bug

--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,7 @@ nav {
   grid-gap: 20px;
 }
 
-.hero-video {
+.video-container {
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
